--- a/mauitest/MainPage.xaml
+++ b/mauitest/MainPage.xaml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="mauitest.MainPage">
+<ContentPage
+    x:Class="mauitest.MainPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <ContentPage.Resources>
-         <DataTemplate x:Key="IconTemplate">
+        <DataTemplate x:Key="IconTemplate">
             <StackLayout
                 Margin="15,0,15,0"
                 Spacing="10"
@@ -48,41 +49,78 @@
 
     </ContentPage.Resources>
     <StackLayout>
+        <Label Text="Normal CarouselView" />
         <CarouselView
-                HeightRequest="130"
-                HorizontalScrollBarVisibility="Never"
-                IndicatorView="indicatorFavourite"
-                IsBounceEnabled="False"
-                ItemsSource="{Binding FavouriteMenuItems, Mode=OneWay}">
-                     <CarouselView.ItemsLayout>
-                        <LinearItemsLayout
-                           Orientation="Horizontal"
-                           SnapPointsAlignment="Center"
-                           SnapPointsType="Mandatory" />
-                      </CarouselView.ItemsLayout>
-                           <CarouselView.ItemTemplate>
-                               <DataTemplate>
-                                    <Frame>
-                                        <CollectionView
-                                            HorizontalScrollBarVisibility="Always"
-                                            ItemsSource="{Binding FeaturesItem}"
-                                            SelectionMode="Single"
-                                            VerticalScrollBarVisibility="Never">
-                                               <CollectionView.ItemsLayout>
-                                                        <LinearItemsLayout ItemSpacing="20" Orientation="Horizontal" />
-                                                    </CollectionView.ItemsLayout>
-                                                </CollectionView>
-                                            </Frame>
-                                        </DataTemplate>
-                                    </CarouselView.ItemTemplate>
-                                </CarouselView>
-                                <IndicatorView
-                                    x:Name="indicatorFavourite"
-                                    Margin="0,-5,0,10"
-                                    HideSingle="False"
-                                    HorizontalOptions="CenterAndExpand"
-                                    VerticalOptions="CenterAndExpand" />
+            HeightRequest="130"
+            HorizontalScrollBarVisibility="Never"
+            IndicatorView="indicatorFavourite"
+            IsBounceEnabled="False"
+            ItemsSource="{Binding FavouriteMenuItems, Mode=OneWay}">
+            <CarouselView.ItemsLayout>
+                <LinearItemsLayout
+                    Orientation="Horizontal"
+                    SnapPointsAlignment="Center"
+                    SnapPointsType="Mandatory" />
+            </CarouselView.ItemsLayout>
+            <CarouselView.ItemTemplate>
+                <DataTemplate>
+                    <Frame>
+                        <CollectionView
+                            HorizontalScrollBarVisibility="Always"
+                            ItemsSource="{Binding FeaturesItem}"
+                            SelectionMode="Single"
+                            VerticalScrollBarVisibility="Never">
+                            <CollectionView.ItemsLayout>
+                                <LinearItemsLayout ItemSpacing="20" Orientation="Horizontal" />
+                            </CollectionView.ItemsLayout>
+                        </CollectionView>
+                    </Frame>
+                </DataTemplate>
+            </CarouselView.ItemTemplate>
+        </CarouselView>
+        <IndicatorView
+            x:Name="indicatorFavourite"
+            Margin="0,-5,0,10"
+            HideSingle="False"
+            HorizontalOptions="CenterAndExpand"
+            VerticalOptions="CenterAndExpand" />
 
+        <Label Text="CarouselView with HorizontalOptions CenterAndExpand" />
+        <CarouselView
+            HeightRequest="130"
+            HorizontalOptions="CenterAndExpand"
+            HorizontalScrollBarVisibility="Never"
+            IndicatorView="indicatorFavourite"
+            IsBounceEnabled="False"
+            ItemsSource="{Binding FavouriteMenuItems, Mode=OneWay}">
+            <CarouselView.ItemsLayout>
+                <LinearItemsLayout
+                    Orientation="Horizontal"
+                    SnapPointsAlignment="Center"
+                    SnapPointsType="Mandatory" />
+            </CarouselView.ItemsLayout>
+            <CarouselView.ItemTemplate>
+                <DataTemplate>
+                    <Frame>
+                        <CollectionView
+                            HorizontalScrollBarVisibility="Always"
+                            ItemsSource="{Binding FeaturesItem}"
+                            SelectionMode="Single"
+                            VerticalScrollBarVisibility="Never">
+                            <CollectionView.ItemsLayout>
+                                <LinearItemsLayout ItemSpacing="20" Orientation="Horizontal" />
+                            </CollectionView.ItemsLayout>
+                        </CollectionView>
+                    </Frame>
+                </DataTemplate>
+            </CarouselView.ItemTemplate>
+        </CarouselView>
+        <IndicatorView
+            x:Name="indicatorFavourite"
+            Margin="0,-5,0,10"
+            HideSingle="False"
+            HorizontalOptions="CenterAndExpand"
+            VerticalOptions="CenterAndExpand" />
     </StackLayout>
 
 </ContentPage>
